test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args/src/inline_attr.sw
library;

struct S { }

impl S {
    #[inline(always)]
    fn ok_1() { }
    
    #[inline(never)]
    fn ok_1() { }

    #[inline(alwys)]
    #[inline(unknown_arg)]
    fn not_ok() { }
}